# ros_topics_watcher

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
ros_topics_watcher/: __init__.py  console.py  topics_watcher.py
scripts/: ros-topics-watcher
tests/: CMakeLists.txt
tests/rostests/: CMakeLists.txt  test_get_topic_class.py  test_get_topic_class.test
